#854 - fix overflowing hero image in ie11

--- a/frontend/scss/molecules/_m-article-header.scss
+++ b/frontend/scss/molecules/_m-article-header.scss
@@ -426,6 +426,7 @@
   bottom: 0;
   width: 100vw;
   margin-left: -50vw;
+  overflow: hidden;
 }
 
 .m-article-header--super-hero .m-article-header__img::after {
@@ -573,6 +574,7 @@
   bottom: 0;
   width: 100vw;
   margin-left: -50vw;
+  overflow: hidden;
 }
 
 .m-article-header--generic .m-article-header__img img,
